# vulkan_cookbook_implementation

./: .gitignore  CLAUDE.md  LICENSE  README.md  Vulkan_Learning_Plan.docx  Vulkan_Learning_Plan.md
VulkanEngine/: CMakeLists.txt
VulkanEngine/docs/: session_2_1_study_notes.md
VulkanEngine/docs/vulkan_book_reference/: 00_QuickReference.md  Chapter01_BuildEnvironment.md  Chapter02_GettingStarted.md  Chapter03_VulkanObjects.md  Chapter04_User_Interaction_Productivity.md  Chapter05_Working_With_Geometry_Data.md  Chapter06_PBR_glTF_Shading.md  Chapter07_Advanced_PBR_Extensions.md  Chapter08_Graphics_Rendering_Pipeline.md  Chapter10_Image_Based_Techniques.md  Chapter11_Reference.md  chapter09_Gltf_Animations.md
VulkanEngine/shaders/: triangle.frag  triangle.vert
VulkanEngine/src/: main.cpp
